[gd_scene load_steps=7 format=3 uid="uid://njvudl5be5lt"]

[ext_resource type="Texture2D" uid="uid://c0c2qjqwk6aqx" path="res://assets/textures/uis/dialog_box.png" id="1"]
[ext_resource type="FontFile" uid="uid://dero3d0outurp" path="res://assets/font/Terminus TTF Bold.ttf" id="2"]
[ext_resource type="AudioStream" uid="uid://bqpgkjxctl2l2" path="res://assets/sounds/dialogs/normal_dialog.wav" id="3"]
[ext_resource type="Script" path="res://src/uis/DialogBox/DialogBox.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://sywckn6p0qro" path="res://assets/textures/faces/niko.png" id="5"]

[sub_resource type="LabelSettings" id="LabelSettings_eer1r"]
font = ExtResource("2")
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="DialogBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.713
anchor_right = 0.993
anchor_bottom = 0.991
offset_top = 0.0499878
offset_right = 106.4
offset_bottom = 22.35
scale = Vector2(0.65, 0.65)
texture = ExtResource("1")

[node name="FaceIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.81
anchor_top = 0.747
anchor_right = 0.966
anchor_bottom = 0.955
offset_left = -1.52588e-05
offset_top = -0.0500031
offset_right = 16.8
offset_bottom = 16.75
scale = Vector2(0.65, 0.65)
texture = ExtResource("5")

[node name="TextEntry" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.74
anchor_right = 0.805
anchor_bottom = 0.967
offset_right = 464.0
offset_bottom = 97.95
scale = Vector2(0.25, 0.25)
text = "aaaaaaaaaaaaaa"
label_settings = SubResource("LabelSettings_eer1r")
autowrap_mode = 3
clip_text = true

[node name="SpeakDelay" type="Timer" parent="."]

[node name="DialogSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")

[connection signal="timeout" from="SpeakDelay" to="." method="_on_SpeakDelay_timeout"]
